# agentic-search

./: .gitignore  LICENSE  README.md  compare_search_results.py  failed_0_999.jsonl  failed_queries.txt  fetch_api_data.py  fetch_google_places_data.py  google_places_results_0_499.jsonl  main.py  pyproject.toml
api_info/: places_api.md
config/: README.md  requirements.txt
data/: representative_keywords.txt  representative_keywords_with_location.csv  sorted_keywords.txt  sorted_keywords_with_location.csv  unique_sorted_keywords.txt  unique_sorted_keywords_with_location.csv
memory/: comparison_memory.jsonl
queries/: failed_0_499.jsonl  google_places_failed_0_499.jsonl
raw/: api_failed_solr_1_10.jsonl  api_results_0_499.jsonl  api_results_solr_1_10.jsonl  failed_solr.jsonl  google_places_failed_with_location.jsonl  google_places_results_1_10.jsonl  google_places_results_with_location.jsonl
scripts/: extract_and_sort_keywords.py  extract_and_sort_keywords_with_location.py  fetch_api_data.py  fetch_api_data_with_location.py  fetch_google_places_data.py  fetch_google_places_data_with_location.py  remove_duplicates.py  remove_duplicates_with_location.py  select_representative_keywords.py  select_representative_keywords_with_location.py
